Added support for overriding the unattended path using an environment variable. Added a pyenv package.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.exclude": {
-        "**/.output\\": true,
-        "**/*.nupkg": true
+        "**/.output": true,
+        "**/*.nupkg": true,
+        "**/.unattended": true
     }
 }
